# Ray-Tracing-Engine

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  GUI_PLAN.md  README.md  RUNNING.md  VSCode_ClaudeCode_Setup.md  box_panel_cooker_specs.md  vcpkg.json
.github/workflows/: ci.yml
app/: compare_main.cpp  main.cpp
assets/meshes/: 12_panels_only_circular_70deg.stl  panels_only_rectangular_2floors_6065deg.stl  panels_only_rectangular_3floors_606570deg.stl  panels_only_rectangular_45deg.stl  panels_only_rectangular_500mm_50deg.stl  panels_only_rectangular_500mm_55deg.stl  panels_only_rectangular_500mm_60deg.stl  panels_only_rectangular_500mm_65deg.stl  panels_only_rectangular_500mm_70deg.stl  panels_only_rectangular_50deg.stl  panels_only_rectangular_55deg.stl  panels_only_rectangular_60deg.stl  panels_only_rectangular_65deg.stl  panels_only_rectangular_70deg.stl
box_results/box_receiver_606570_stl_10m/: summary.json
box_results/box_receiver_606570_stl_10m/csv/: flux_bottom.csv  flux_east_wall.csv  flux_glass_top.csv  flux_north_wall.csv  flux_south_wall.csv  flux_west_wall.csv
box_results/box_receiver_606570_stl_1m/: summary.json
box_results/box_receiver_606570_stl_1m/csv/: flux_bottom.csv  flux_east_wall.csv  flux_glass_top.csv  flux_north_wall.csv  flux_south_wall.csv  flux_west_wall.csv
box_results/box_receiver_6065_stl_10m/: summary.json
box_results/box_receiver_6065_stl_10m/csv/: flux_bottom.csv  flux_east_wall.csv  flux_glass_top.csv  flux_north_wall.csv  flux_south_wall.csv  flux_west_wall.csv
box_results/box_receiver_6065_stl_1m/: summary.json
box_results/box_receiver_6065_stl_1m/csv/: flux_bottom.csv  flux_east_wall.csv  flux_glass_top.csv  flux_north_wall.csv  flux_south_wall.csv  flux_west_wall.csv
cmake/: CompilerWarnings.cmake
docs/: codebase_notes.md  technical_report.tex
docs/plans/: BOX_PANEL_PLAN.md  IMPLEMENTATION_PLAN.md  SolarCookerRayTracer_Plan.md
examples/: box_cooker.json  fresnel_lens_cooker.json  panel_cooker.json  panel_cooker_10.json  panel_cooker_12.json  panel_cooker_12_receiver_0_5.json  panel_cooker_12_receiver_0_5_neg.json  panel_cooker_12_receiver_1_0.json  panel_cooker_12_receiver_1_0_neg.json  panel_cooker_12_receiver_1_5.json  panel_cooker_12_receiver_1_5_neg.json  panel_cooker_12_receiver_2_0.json  panel_cooker_12_receiver_2_0_neg.json  panel_cooker_14.json  panel_cooker_16.json  panel_cooker_18.json  panel_cooker_20.json  panel_cooker_22.json  panel_cooker_24.json  panel_cooker_26.json  panel_cooker_6.json  panel_cooker_8.json  panel_cooker_compact_best.json  parabolic_dish.json  parabolic_trough.json  scheffler_reflector.json  stl_rectangular_2floors_6065deg_box.json  stl_rectangular_3floors_606570deg.json  stl_rectangular_3floors_606570deg_box.json  stl_rectangular_45deg.json  stl_rectangular_50deg.json  stl_rectangular_55deg.json  stl_rectangular_60deg.json  stl_rectangular_65deg.json  stl_rectangular_70deg.json  stl_reflector_circular_demo.json  stl_reflector_demo.json  test.json
examples/panel_tests/: panel_cooker_10.json  panel_cooker_12.json  panel_cooker_12_receiver_0_5_neg.json  panel_cooker_12_receiver_1_0_neg.json  panel_cooker_12_receiver_1_5.json  panel_cooker_12_receiver_1_5_neg.json  panel_cooker_12_receiver_2_0.json  panel_cooker_14.json  panel_cooker_18.json  panel_cooker_20.json  panel_cooker_6.json  panel_cooker_8.json
include/scrt/accel/: BVH.hpp
include/scrt/core/: AABB.hpp  Hit.hpp  Ray.hpp  Transform.hpp
include/scrt/io/: MeshImporter.hpp  ResultsExporter.hpp  SceneLoader.hpp
include/scrt/materials/: Absorber.hpp  Dielectric.hpp  Material.hpp  PerfectMirror.hpp  RealMirror.hpp
include/scrt/math/: Constants.hpp  Rng.hpp  Sampling.hpp  Vec.hpp
include/scrt/optics/: Fresnel.hpp  Paraxial.hpp  Reflect.hpp  Refract.hpp
include/scrt/scene/: Aperture.hpp  Receiver.hpp  Scene.hpp
include/scrt/sources/: Buie.hpp  Pillbox.hpp  SunSource.hpp
include/scrt/surfaces/: CylindricalParaboloid.hpp  FresnelZoneLens.hpp  GeneralQuadric.hpp  ImplicitSDF.hpp  Paraboloid.hpp  Plane.hpp  Sphere.hpp  Surface.hpp  TriangleMesh.hpp
include/scrt/tracer/: FluxAccumulator.hpp  Tracer.hpp
include/scrt/viz/: FluxPlotter.hpp  RayRenderer.hpp  Viewer.hpp
scripts/: optimize_compact.py  package.ps1  plot_box_flux_maps.py  plot_flux_maps.py  sweep.py  sweep_stl_rect_angles.py
src/accel/: BVH.cpp
src/core/: AABB.cpp  Transform.cpp
src/io/: MeshImporter.cpp  ResultsExporter.cpp  SceneLoader.cpp
src/materials/: Absorber.cpp  Dielectric.cpp  PerfectMirror.cpp  RealMirror.cpp
src/math/: Rng.cpp
src/optics/: Fresnel.cpp  Paraxial.cpp  Refract.cpp
src/scene/: Aperture.cpp  Receiver.cpp  Scene.cpp
src/sources/: Buie.cpp  Pillbox.cpp
src/surfaces/: CylindricalParaboloid.cpp  FresnelZoneLens.cpp  GeneralQuadric.cpp  ImplicitSDF.cpp  Paraboloid.cpp  Plane.cpp  Sphere.cpp  TriangleMesh.cpp
src/tracer/: FluxAccumulator.cpp  Tracer.cpp
src/viz/: FluxPlotter.cpp  RayRenderer.cpp  Viewer.cpp
tests/: test_compare.cpp  test_dielectric_spectrum.cpp  test_fresnel.cpp  test_fresnel_zone_lens.cpp  test_intersections.cpp  test_paraxial.cpp  test_reflect_refract.cpp  test_scene_io.cpp  test_sun.cpp  test_vec.cpp
